# myzel

./: CLAUDE.md  DEPLOY_GUIDE.md  Konzept.md  Makefile.operations  create_cloudfront_distribution.py  delete_cloudfront_distribution.py  example_1.py  example_api_gateway.py  example_lambda.py  example_simple.py  example_usage.py  get_cloudfront_info.py  main.py  pyproject.toml  update_cloudfront_distribution.py
config/: app_example_1.yaml  app_example_api_gateway.yaml  app_example_lambda.yaml  app_example_simple.yaml
functions/hallo_welt/: lambda_function.py  pyproject.toml
functions/todo_create/: lambda_function.py  pyproject.toml
functions/todo_delete/: lambda_function.py
functions/todo_list/: lambda_function.py
functions/todo_update/: lambda_function.py
src/core/: __init__.py  deploy.py  destroy.py  diff.py  diff_engine.py  state_manager.py  transactional_deploy.py
src/examples/: example_1.py
src/examples/config/: app_example_1.yaml
src/model/: __init__.py  registry.py
src/resources/: __init__.py  api_gateway.py  cloudfront.py  dynamodb.py  iam_role.py  lambda_function.py  s3.py  s3_deploy.py
test/operations/: __init__.py  run_all_tests.py  test_dynamodb_operations.py  test_lambda_operations.py  test_s3_operations.py
test/resources/: env_helper.py  generic_resources_test.py  resource_tester.py  test_api_gateway.py  test_cloudfront.py  test_dynamodb.py  test_iam_role.py  test_lambda.py  test_s3.py
web/: index.html  todos.html  tolle_ui.html
web/other/: index.html
web/other/other/: index.html
