[project]
name = "myzel-iac"
version = "0.1.0"
description = "AWS Infrastructure as Code Framework with Diff Management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "packaging>=21.0",
]


[project.scripts]
myzel-iac = "src.cli:cli"

